--- a/amplify/assets/css/logan-styles.css
+++ b/amplify/assets/css/logan-styles.css
@@ -88,6 +88,7 @@ form h3{
 
 .grid-row.events .col.one-2{
   padding:1rem;
+  box-sizing: border-box;
 }
 
 
